--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,24 +11,22 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 16
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '16'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Run the Maven verify phase
+      run: mvn --batch-mode --update-snapshots verify
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
